--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\User\\.virtualenvs\\tired-M1sF0aaD\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\randy\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
